cambio del index en una nueva rama

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             Este es un ejemplo de codigo en HTML utilizando git
         </p>
     </main>
+    <aside>
+        <img src="https://static.wikia.nocookie.net/random/images/5/59/Milly.png/revision/latest/scale-to-width-down/900?cb=20240930164608&path-prefix=es" alt="Silly cat image" height="150" width="100">
+        <!--Añadido a las 9:55-->
+    </aside>
     <footer>
         <p>&copy; version 2025 19/03/2025</p>
     </footer>
