--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <p>
             Este es un ejemplo de codigo en HTML utilizando git
         </p>
+        <p>
+            cambio rama 2
+        </p>
     </main>
     <aside>
         <img src="https://static.wikia.nocookie.net/random/images/5/59/Milly.png/revision/latest/scale-to-width-down/900?cb=20240930164608&path-prefix=es" alt="Silly cat image" height="150" width="100">
